--- a/real/css/style.css
+++ b/real/css/style.css
@@ -6,8 +6,13 @@
   font-style: normal;
 }
 
-html {
-  color: white;
+:root {
+  --blue-color: rgb(0, 26, 201);
+  --grey-color: rgb(186, 186, 186);
+  --green-color: rgb(0, 127, 126);
+  --red-color: rgb(245, 34, 0);
+  --yellow-color: rgb(245, 245, 1);
+  --box-shadow: rgb(230, 230, 230);
 }
 
 body {
@@ -15,54 +20,42 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  backdrop-filter: blur(3px);
+  /* backdrop-filter: blur(3px); */
   position: relative;
-  background-color: black;
-}
-#clock:hover {
-  /* border: 2px solid rgba(0, 0, 0, 0); */
-  box-shadow: none;
+  background-color: var(--green-color);
+  font-family: "LAB디지털";
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #clock {
-  /* position: absolute;
-  top: 10vh;
-  left: 20vw; */
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border-radius: 10px; */
   width: 250px;
   height: 100px;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-family: "LAB디지털";
-  font-size: 70px;
-  font-style: italic;
-  /* color: rgba(196, 255, 107, 1); */
-  border-radius: 10px;
-  /* border: 2px solid rgb(84, 167, 124); */
-  /* box-shadow: 0px 0px 15px rgb(84, 167, 124),
-    inset 0px 0px 15px rgb(84, 167, 124); */
-  /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); */
-  margin-bottom: 10px;
-  /* transform: translate(20vw, 15vh); */
+  background-color: rgba(0, 0, 0, 1);
+  font-size: 72px;
+  font-weight: 500;
+  color: var(--red-color);
 }
 
-#clock {
-  /* font-weight: bolder; */
+/* #clock {
   background-image: linear-gradient(
     to right,
     rgb(72, 213, 183),
-    /* rgba(215, 255, 246, 0.7), */ rgb(72, 213, 183)
+    rgba(215, 255, 246, 0.7), rgb(72, 213, 183)
   );
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-}
+} */
 
 #clock {
-  color: #fff;
-  text-shadow: 0 0 10px #fff, 0 0 3px #fff;
+  /* color: #fff;
+  text-shadow: 0 0 10px #fff, 0 0 3px #fff; */
 }
 
 #login-form {
@@ -81,26 +74,99 @@ body {
 .hidden {
   display: none;
 }
+
 #greeting {
-  /* position: absolute;
-  top: 25vh;
-  left: 20vw; */
-  /* font-family: "LAB디지털"; */
-  font-size: 80px;
-  color: #fff;
-  text-shadow: 0 0 10px #fff;
+  font-size: 50px;
+  background-color: var(--grey-color);
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 200px;
+}
+
+#upper {
+  width: 100%;
+  height: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
+  background-color: var(--blue-color);
+}
+
+#todo-window {
+  /* padding: 10px 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border-width: 4px;
+  border-style: outset;
+  width: 50vw;
+  height: 30vh;
+  background-color: silver;
+  box-shadow: 2px 2px 0px black;
+  font-size: 25px;
 }
 
 #todo-box {
-  border-radius: 10px;
-  padding: 10px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid white;
-  width: 30vw;
-  background-color: silver;
+  width: 96%;
+  height: 80%;
+  border-width: 7px;
+  border-style: outset;
+  border-color: var(--box-shadow);
+  background-color: var(--grey-color);
+}
+
+#todo-form {
+  margin-top: 20px;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-width: 6px;
+  border-style: inset;
+  border-color: var(--box-shadow);
+  background-color: var(--grey-color);
+  width: 90%;
+  height: 30%;
+}
+
+#form-text {
+  height: 85%;
+  width: 80%;
+  border: none;
+  font-size: 20px;
+}
+
+#form-submit {
+  width: 20%;
+  height: 95%;
+  font-size: 15px;
+  background-color: var(--grey-color);
+  border-style: outset;
+  border-width: 5px;
+  border-color: rgb(180, 180, 180);
+}
+
+#todo-list {
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+  border-width: 6px;
+  border-style: inset;
+  border-color: var(--box-shadow);
+  background-color: var(--grey-color);
+  padding: 20px 0px;
 }
 
 #quote {
