--- a/real/css/style.css
+++ b/real/css/style.css
@@ -1,3 +1,18 @@
+html {
+  background-color: rgb(247, 247, 0);
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../img/warrior.png");
+  background-repeat: no-repeat;
+  background-size: 900px;
+  background-position: top right, 0px 0px;
+  font-family: "Roboto", sans-serif;
+}
+.hidden {
+  display: none;
+}
 @font-face {
   font-family: "LAB디지털";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/LAB디지털.woff")
@@ -6,173 +21,81 @@
   font-style: normal;
 }
 
-:root {
-  --blue-color: rgb(0, 26, 201);
-  --grey-color: rgb(186, 186, 186);
-  --green-color: rgb(0, 127, 126);
-  --red-color: rgb(245, 34, 0);
-  --yellow-color: rgb(245, 245, 1);
-  --box-shadow: rgb(230, 230, 230);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  /* backdrop-filter: blur(3px); */
-  position: relative;
-  background-color: var(--green-color);
+.clocks {
   font-family: "LAB디지털";
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-weight: 600;
+  font-size: 100px;
 }
 
-#clock {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 250px;
+.clocks div {
   height: 100px;
-  background-color: rgba(0, 0, 0, 1);
-  font-size: 72px;
-  font-weight: 500;
-  color: var(--red-color);
 }
 
-/* #clock {
-  background-image: linear-gradient(
-    to right,
-    rgb(72, 213, 183),
-    rgba(215, 255, 246, 0.7), rgb(72, 213, 183)
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-} */
-
-#clock {
-  /* color: #fff;
-  text-shadow: 0 0 10px #fff, 0 0 3px #fff; */
+.clocks div:nth-child(1),
+.clocks div:nth-child(3) {
+  color: black;
+  /* text-shadow: 2px 2px 5px black; */
 }
-
-#login-form {
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  width: 250px;
-  height: 100px;
-  background-color: black;
-  font-family: "LAB디지털";
-  font-size: 60px;
-  border: 1px double white;
-}
-
-.hidden {
-  display: none;
+.clocks div:nth-child(2) {
+  color: aqua;
+  /* text-shadow: 2px 2px 5px aqua; */
 }
 
 #greeting {
-  font-size: 50px;
-  background-color: var(--grey-color);
-  color: black;
+  width: 500px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 400px;
-  height: 200px;
-}
-
-#upper {
-  width: 100%;
-  height: 20px;
-  color: white;
-  display: flex;
-  align-items: center;
-  background-color: var(--blue-color);
+  font-size: 50px;
+  font-weight: 100px;
+  color: rgba(255, 255, 255, 0.8);
+  text-align: end;
+  /* transform: translate(50vw, 0); */
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.7),
+    rgba(0, 0, 0, 0.3),
+    rgba(255, 255, 255, 0.5)
+  );
+  border: 1.5px solid white;
+  box-shadow: inset 0 0 0px white;
+  border-radius: 50px 5px 0px 5px;
 }
 
 #todo-window {
-  /* padding: 10px 20px; */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  border-width: 4px;
-  border-style: outset;
-  width: 50vw;
-  height: 30vh;
-  background-color: silver;
-  box-shadow: 2px 2px 0px black;
-  font-size: 25px;
-}
-
-#todo-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 96%;
-  height: 80%;
-  border-width: 7px;
-  border-style: outset;
-  border-color: var(--box-shadow);
-  background-color: var(--grey-color);
-}
-
-#todo-form {
-  margin-top: 20px;
-  font-size: 25px;
+  width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-width: 6px;
-  border-style: inset;
-  border-color: var(--box-shadow);
-  background-color: var(--grey-color);
-  width: 90%;
-  height: 30%;
+  font-size: 20px;
+  font-weight: 100px;
+  color: rgba(255, 255, 255, 0.8);
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.7),
+    rgba(0, 0, 0, 0.3),
+    rgba(255, 255, 255, 0.5)
+  );
+  border: 1.5px solid white;
+  box-shadow: inset 0 0 0px white;
+  border-radius: 50px 5px 0px 5px;
 }
 
 #form-text {
-  height: 85%;
-  width: 80%;
+  background: none;
   border: none;
-  font-size: 20px;
+  border-bottom: 2px solid white;
+  color: white;
+  font-weight: 700;
 }
-
+#form-text::placeholder {
+  color: white;
+  font-weight: 100;
+}
 #form-submit {
-  width: 20%;
-  height: 95%;
-  font-size: 15px;
-  background-color: var(--grey-color);
-  border-style: outset;
-  border-width: 5px;
-  border-color: rgb(180, 180, 180);
-}
-
-#todo-list {
-  font-size: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 90%;
-  height: 100%;
-  border-width: 6px;
-  border-style: inset;
-  border-color: var(--box-shadow);
-  background-color: var(--grey-color);
-  padding: 20px 0px;
-}
-
-#quote {
-  color: lawngreen;
-}
-
-#weather {
-  color: aquamarine;
+  background: none;
+  border: 2px solid white;
+  color: white;
+  border-radius: 20px;
 }
